--- a/package.json
+++ b/package.json
@@ -4,12 +4,16 @@
   "private": true,
   "dependencies": {
     "apollo-client-preset": "^1.0.8",
+    "apollo-link-ws": "^1.0.7",
     "graphql": "^0.13.2",
     "graphql-tag": "^2.8.0",
     "react": "^16.2.0",
     "react-apollo": "^2.0.4",
     "react-dom": "^16.2.0",
-    "react-scripts": "1.1.1"
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
+    "react-scripts": "1.1.1",
+    "subscriptions-transport-ws": "^0.9.6"
   },
   "scripts": {
     "start": "PORT=3006 react-scripts start",
